# qt_procmon

./: .appveyor.yml  .gitignore  .gitmodules  .ninja_deps  .ninja_log  .travis.yml  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.ninja  images  rules.ninja
Src/: CMakeLists.txt  CMakeSettings.json  build_all_Debug.sh  build_all_Release.sh
Src/..build/Linux/x64_x86/Debug/: helloworld
Src/helloworld/: .CMakeLists.txt.swp  CMakeLists.txt  helloworld_Debug.sh  helloworld_Release.sh  qt-main.cpp
tests/: CMakeLists.txt  qt_procmon_tst  test1.cpp
